...
      return;
    }
    setPage(page + 1);
    fetchVideoLiveStreamBuffers();
  };
  return (
    <View style={styles.container} testID='videoLiveStreamBufferScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={videoLiveStreamBufferList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
