...
      <RoundedButton text='RankUser' onPress={() => navigation.navigate('RankUser')} testID='rankUserEntityScreenButton' />
      <RoundedButton text='RankGroup' onPress={() => navigation.navigate('RankGroup')} testID='rankGroupEntityScreenButton' />
      <RoundedButton text='Notification' onPress={() => navigation.navigate('Notification')} testID='notificationEntityScreenButton' />
      <RoundedButton text='Album' onPress={() => navigation.navigate('Album')} testID='albumEntityScreenButton' />
      <RoundedButton text='Video' onPress={() => navigation.navigate('Video')} testID='videoEntityScreenButton' />
      <RoundedButton text='Image' onPress={() => navigation.navigate('Image')} testID='imageEntityScreenButton' />
      <RoundedButton text='VideoStream' onPress={() => navigation.navigate('VideoStream')} testID='videoStreamEntityScreenButton' />
      <RoundedButton
        text='VideoLiveStreamBuffer'
        onPress={() => navigation.navigate('VideoLiveStreamBuffer')}
        testID='videoLiveStreamBufferEntityScreenButton'
      />
      <RoundedButton text='TopicInterest' onPress={() => navigation.navigate('TopicInterest')} testID='topicInterestEntityScreenButton' />
      <RoundedButton text='TodoList' onPress={() => navigation.navigate('TodoList')} testID='todoListEntityScreenButton' />
      <RoundedButton text='Event' onPress={() => navigation.navigate('Event')} testID='eventEntityScreenButton' />
      <RoundedButton text='BaseInfo' onPress={() => navigation.navigate('BaseInfo')} testID='baseInfoEntityScreenButton' />
      <RoundedButton text='Permission' onPress={() => navigation.navigate('Permission')} testID='permissionEntityScreenButton' />
...
