...
      return;
    }
    setPage(page + 1);
    fetchVideoStreams();
  };
  return (
    <View style={styles.container} testID='videoStreamScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={videoStreamList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
